--- a/.github/workflows/build-circuits.yml
+++ b/.github/workflows/build-circuits.yml
@@ -49,7 +49,7 @@ jobs:
       ARCH: x86_64
     steps:
       - name: Install Rust Toolchain
-        uses: actions-rust-lang/setup-rust-toolchain@v1
+        uses: actions-rust-lang/setup-rust-toolchain@fb51252c7ba57d633bc668f941da052e410add48
         with:
           toolchain: stable
           cache: false
@@ -63,7 +63,7 @@ jobs:
           circom --version
 
       - name: Checkout
-        uses: actions/checkout@v4
+        uses: actions/checkout@8edcb1bdb4e267140fa742c62e395cd74f332709
         with:
           path: repo
 
@@ -115,7 +115,7 @@ jobs:
           tar -czf "${BUNDLE_NAME}.tar.gz" "${BUNDLE_NAME}"
 
       - name: Upload Bundle
-        uses: actions/upload-artifact@v4 
+        uses: actions/upload-artifact@de65e23aa2b7e23d713bb51fbfcb6d502f8667d8 
         with:
           name: circom_circuits-${{ env.OS }}-${{ env.ARCH }}.tar.gz
           path: repo/circom_circuits-${{ env.OS }}-${{ env.ARCH }}.tar.gz
@@ -131,7 +131,7 @@ jobs:
       ARCH: x86_64
     steps:
       - name: Setup MSYS2
-        uses: msys2/setup-msys2@v2
+        uses: msys2/setup-msys2@v2.28.0 # FIXME: Ideally use the hash to avoid supply chain attacks. Currently unable to.
         with:
           update: true
           install: >-
@@ -141,7 +141,7 @@ jobs:
             git
 
       - name: Install Rust Toolchain
-        uses: actions-rust-lang/setup-rust-toolchain@v1
+        uses: actions-rust-lang/setup-rust-toolchain@fb51252c7ba57d633bc668f941da052e410add48
         with:
           toolchain: stable
           cache: false
@@ -155,7 +155,7 @@ jobs:
           circom --version
 
       - name: Checkout
-        uses: actions/checkout@v4
+        uses: actions/checkout@8edcb1bdb4e267140fa742c62e395cd74f332709
         with:
           path: repo
 
@@ -253,7 +253,7 @@ jobs:
           tar -czf "${BUNDLE_NAME}.tar.gz" "${BUNDLE_NAME}"
 
       - name: Upload Bundle
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@de65e23aa2b7e23d713bb51fbfcb6d502f8667d8
         with:
           name: circom_circuits-${{ env.OS }}-${{ env.ARCH }}.tar.gz
           path: repo/circom_circuits-${{ env.OS }}-${{ env.ARCH }}.tar.gz
@@ -269,7 +269,7 @@ jobs:
       OS: macos
     steps:
       - name: Install Rust Toolchain
-        uses: actions-rust-lang/setup-rust-toolchain@v1
+        uses: actions-rust-lang/setup-rust-toolchain@fb51252c7ba57d633bc668f941da052e410add48
         with:
           toolchain: stable
           cache: false
@@ -283,7 +283,7 @@ jobs:
           circom --version
 
       - name: Checkout
-        uses: actions/checkout@v4
+        uses: actions/checkout@8edcb1bdb4e267140fa742c62e395cd74f332709
         with:
           path: repo
 
@@ -342,7 +342,7 @@ jobs:
           tar -czf "${BUNDLE_NAME}.tar.gz" "${BUNDLE_NAME}"
 
       - name: Upload Bundle
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@de65e23aa2b7e23d713bb51fbfcb6d502f8667d8
         with:
           name: circom_circuits-${{ env.OS }}-${{ env.ARCH }}.tar.gz
           path: repo/circom_circuits-${{ env.OS }}-${{ env.ARCH }}.tar.gz
@@ -361,7 +361,7 @@ jobs:
       upload_url: ${{ steps.create_release.outputs.upload_url }}
     steps:
       - name: Create Release
-        uses: actions/create-release@v1
+        uses: actions/create-release@4c11c9fe1dcd9636620a16455165783b20fc7ea0
         id: create_release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -406,12 +406,12 @@ jobs:
       ARTIFACT_NAME: circom_circuits-${{ matrix.platform.os }}-${{ matrix.platform.arch }}.tar.gz
     steps:
       - name: Download Artifacts
-        uses: actions/download-artifact@v4
+        uses: actions/download-artifact@448e3f862ab3ef47aa50ff917776823c9946035b
         with:
           name: ${{ env.ARTIFACT_NAME }}
 
       - name: Upload Artifacts to Release
-        uses: actions/upload-release-asset@v1
+        uses: actions/upload-release-asset@ef2adfe8cb8ebfa540930c452c576b3819990faa
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
