--- a/.github/workflows/build-circuits.yml
+++ b/.github/workflows/build-circuits.yml
@@ -94,6 +94,10 @@ jobs:
         working-directory: repo/circom_circuits/Mantle
         run: circom --c --r1cs --no_asm --O2 pol.circom
 
+      - name: Replace Witness Generator Makefile # TODO: Make a fork generate the appropriate Linux Makefile
+        working-directory: repo
+        run: cp .github/resources/witness-generator/${{ env.OS }}.Makefile circom_circuits/Mantle/pol_cpp/Makefile
+
       - name: Compile Witness Generator
         working-directory: repo/circom_circuits/Mantle/pol_cpp
         run: make pol
