--- a/.github/workflows/build-circuits.yml
+++ b/.github/workflows/build-circuits.yml
@@ -280,9 +280,9 @@ jobs:
           BUNDLE_DIR="${BUNDLE_NAME}/${BINARY_NAME}"
           mkdir -p "$BUNDLE_DIR"
 
-          MINGW_BASE_DIR="/${MSYSTEM,,}"
-          MINGW_DLL_DIR="$MINGW_BASE_DIR/bin"
-          cp "$MINGW_DLL_DIR"/{libgcc_s_seh-1.dll,libwinpthread-1.dll,libstdc++-6.dll} "$BUNDLE_DIR/"
+          #MINGW_BASE_DIR="/${MSYSTEM,,}"
+          #MINGW_DLL_DIR="$MINGW_BASE_DIR/bin"
+          #cp "$MINGW_DLL_DIR"/{libgcc_s_seh-1.dll,libwinpthread-1.dll,libstdc++-6.dll} "$BUNDLE_DIR/"
 
           mv "${RAPIDSNARK_DIR}"/bin/${BINARY_NAME}.exe "$BUNDLE_DIR/"
 
