--- a/.github/workflows/build-circuits.yml
+++ b/.github/workflows/build-circuits.yml
@@ -104,11 +104,11 @@ jobs:
 
       - name: Replace Witness Generator Makefile # TODO: Make a fork generate the appropriate Linux Makefile
         working-directory: repo
-        run: cp .github/resources/witness-generator/${{ env.OS }}.Makefile circom_circuits/Mantle/pol_cpp/Makefile
+        run: cp .github/resources/witness-generator/Makefile circom_circuits/Mantle/pol_cpp/Makefile
 
       - name: Compile Witness Generator
         working-directory: repo/circom_circuits/Mantle/pol_cpp
-        run: make pol
+        run: make linux
 
       - name: Bundle Rapidsnark Prover
         working-directory: repo
@@ -270,12 +270,12 @@ jobs:
       - name: Replace Witness Generator Makefile # TODO: Make a fork generate the appropriate Windows Makefile
         shell: msys2 {0}
         working-directory: repo
-        run: cp .github/resources/witness-generator/${{ env.OS }}.Makefile circom_circuits/Mantle/pol_cpp/Makefile
+        run: cp .github/resources/witness-generator/Makefile circom_circuits/Mantle/pol_cpp/Makefile
 
       - name: Compile Witness Generator
         shell: msys2 {0}
         working-directory: repo/circom_circuits/Mantle/pol_cpp
-        run: make pol.exe
+        run: make windows
 
       - name: Bundle Rapidsnark Prover
         shell: msys2 {0}
@@ -394,7 +394,7 @@ jobs:
 
       - name: Replace Witness Generator's Makefile # TODO: Make a fork generate the appropriate MacOS Makefile
         working-directory: repo
-        run: cp .github/resources/witness-generator/${{ env.OS }}.Makefile circom_circuits/Mantle/pol_cpp/Makefile
+        run: cp .github/resources/witness-generator/Makefile circom_circuits/Mantle/pol_cpp/Makefile
 
       - name: Patch MacOS GMP
         working-directory: repo
@@ -402,7 +402,7 @@ jobs:
 
       - name: Compile Witness Generator
         working-directory: repo/circom_circuits/Mantle/pol_cpp
-        run: make pol
+        run: make macos
 
       - name: Bundle Rapidsnark Prover
         working-directory: repo
