Remove cmake install command from macos.

--- a/.github/workflows/build-circuits.yml
+++ b/.github/workflows/build-circuits.yml
@@ -380,7 +380,7 @@ jobs:
         run: brew install nlohmann-json
 
       - name: Install Dependencies [Prover]
-        run: brew install cmake nasm m4
+        run: brew install nasm m4
 
       - name: Compile Prover and Verifier
         working-directory: repo/circom_circuits/rapidsnark
